# gfx2cuda

./: LICENSE  README.md  pyproject.toml
gfx2cuda/: __init__.py  backends.py  exception.py  format.py  gfx2cuda.py
gfx2cuda/dll/: cuda.py  d3d.py  dxgi.py
test/: multiprocess.py  torchinterop.py
